# baby-cakes

./: .gitignore  README.md  app.py  pyproject.toml
archives/: RFE.py  build_model.py  check_feature_correlation.py  clean.py  data_utils.py  feature_engineering.py  keywords.py  model.py  nonlinear_model.py  text_embedding_linear_all_feaures.py  uv_backup
archives/models/: text_embedding_nonlinear.py
archives/pre_consolidation/: app.py  clean_tweets.py  exploration.ipynb  feature_engineering_prev.py  repetition.py  text.ipynb
archives/pre_consolidation/pre_looking_at_far_right/: build_db.py  clean.py
archives/text_embedding_linear/: README.md  combine.py  learn.py  run.py
archives/text_embedding_linear_all_features/: requirements.txt  text_embedding_linear_all_feaures.py
archives/text_embedding_nonlinear/: learn.ipynb
archives/text_embedding_nonlinear_all_features/: insider_terms.txt  run.ipynb  text_embedding_nonlinear_all_features.py
build_models/: clean_and_shuffle_datasets.py  create_model_pkls.py  scrape_additional_data.py
build_models/keyword_lists/: KeywordLists.md
data/: Data.md
milestones/: Milestone1.md  milestone2.md  milestone3.md  milestone5.md
model_testing/: feature_testing.ipynb  model_eval.ipynb
templates/: app.html
